add service support

--- a/src/jw/settings.cfg
+++ b/src/jw/settings.cfg
@@ -1,2 +1,5 @@
-
-
+[JIRA_MISS_TIME]
+jira_url = http://jira.aaaaaaa.com
+login_name = aaaaa
+login_password = bbbbbbb
+filter = project in ("Tom Test Project")
