--- a/src/jw/settings.cfg
+++ b/src/jw/settings.cfg
@@ -1,5 +1,7 @@
 [JIRA_MISS_TIME]
-jira_url = http://jira.aaaaaaa.com
-login_name = aaaaa
-login_password = bbbbbbb
-filter = project in ("Tom Test Project")
+jira_url = http://jira.aaa.com
+login_name =
+login_password =
+filter = project in ("Tom Test Project") AND status in (Closed, Done, "PM Testing", Testing) AND type not in (Epic, subTaskIssueTypes()) AND (timespent is EMPTY OR timespent = 0) AND fixVersion is EMPTY AND updated >= 2017-11-01 ORDER BY Status DESC, updated DESC
+notice_for_assignee = [SYSTEM NOTICE] Log time, please !
+notice_for_reporter = [SYSTEM NOTICE] The issue has not been assigned !
